// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledText should render description 1`] = `
.c0 {
  font-weight: normal;
  font-size: 1rem;
  margin: 0;
  display: inline-block;
}

<div>
  <p
    class="c0"
  >
    Dummy
  </p>
</div>
`;

exports[`StyledText should render description by default 1`] = `
.c0 {
  font-weight: normal;
  font-size: 1rem;
  margin: 0;
  display: inline-block;
}

<div>
  <p
    class="c0"
  >
    Dummy
  </p>
</div>
`;

exports[`StyledText should render subTitle 1`] = `
.c0 {
  font-weight: 600;
  font-size: 1.25rem;
  margin: 0;
  display: inline-block;
}

<div>
  <h4
    class="c0"
  >
    Dummy
  </h4>
</div>
`;

exports[`StyledText should render title 1`] = `
.c0 {
  font-weight: bold;
  font-size: 1.5rem;
  margin: 0;
  display: inline-block;
}

<div>
  <h2
    class="c0"
  >
    Dummy
  </h2>
</div>
`;
